--- a/src/pages/TrelloListSecond.css
+++ b/src/pages/TrelloListSecond.css
@@ -1,10 +1,11 @@
 .Trello-app {
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  justify-content: start;
 }
 
 .Trello-app .column {
+  margin: 0 50px;
   width: 30%;
 }
 
@@ -13,7 +14,7 @@
   flex-direction: column;
   width: 100%;
   background-color: gray;
-  padding: 10px 10px 0 10px ;
+  padding: 10px 10px 0 10px;
   border-radius: 7px;
 }
 
