--- a/src/pages/TrelloListSecond.css
+++ b/src/pages/TrelloListSecond.css
@@ -26,3 +26,14 @@
   padding: 5px;
   border-radius: 7px;
 }
+.flex-around {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.input-bg {
+  background-color: #e1e7ff;
+  border: none;
+  font-size: 16px;
+  margin: 10px;
+}
